--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,11 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 
+@media only screen and (max-width: 768px) {
+    .flipbook {
+        width: 100vw;
+        height: calc(100vw / 2.22);
+    }
+}
 
 *{
     margin: 0;
@@ -21,8 +27,8 @@ body {
 
 
 .flipbook {
-    width: 1332px;
-    height: 600px;
+    width: 85vw;
+    height: calc(85vw / 2.22);
 }
 
 .flipbook .hard {
